# portfolio_tracker

./: .gitignore  README.md  config.py  pyproject.toml  requirements.txt
app/: __init__.py  models.py  routes.py  utils.py
app/static/css/: style.css
app/templates/: add_gold.html  add_gold_sell.html  add_mf_transaction.html  add_property.html  add_stock.html  add_stock_transaction.html  add_user.html  base.html  dashboard.html  edit_gold.html  edit_gold_sell.html  edit_mf_transaction.html  edit_property.html  edit_stock.html  edit_stock_transaction.html  edit_user.html  fetch_stock_prices.html  gold.html  gold_prices.html  index.html  mf_scheme_details.html  mutual_funds.html  real_estate.html  stocks.html  transactions.html  upload_cas.html  upload_stock_csv.html  users.html  view_gold.html  view_property.html  view_stock.html
