[project]
name = "portfolio-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.2",
    "flask-bcrypt>=1.0.1",
    "flask-sqlalchemy>=3.1.1",
    "markupsafe>=3.0.3",
    "selenium>=4.38.0",
    "webdriver-manager>=4.0.2",
]
