[project]
name = "portfolio-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "casparser>=0.8.1",
    "flask>=3.1.2",
    "flask-bcrypt>=1.0.1",
    "flask-sqlalchemy>=3.1.1",
    "kiteconnect>=5.0.1",
    "markupsafe>=3.0.3",
    "requests>=2.32.5",
    "selenium>=4.38.0",
    "webdriver-manager>=4.0.2",
]
